[package]
name = "pixelands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["dynamic_linking", "png", "bevy_winit", "bevy_gizmos", "bevy_render", "bevy_sprite", "bevy_asset", "bevy_core_pipeline", "bevy_pbr", "tonemapping_luts"] }
bevy_egui = "0.34.1"
rand = "0.9.1"
